# svgcompressor

./: .gitignore  Cargo.toml  README.md
scripts/: build_linux.sh  build_macos.sh  build_windows.sh  clean.sh
src/: bin.rs  lib.rs
