[package]
name = "svgcompressor"
version = "0.1.0"
authors = ["32byte <xlebedenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "compressor"
path = "src/lib.rs"


[[bin]]
name = "svgcomp"
path = "src/bin.rs"

[dependencies]
roxmltree = "0.14.1"
clap = "2.33.3"